feature: new application type - Module.